--- a/src/styles/Messages.css
+++ b/src/styles/Messages.css
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100000000000;
+  z-index: 9999;
 }
 
 .messages__message.success {
