--- a/src/styles/PreLoader.css
+++ b/src/styles/PreLoader.css
@@ -2,7 +2,7 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  z-index: 99999999999999999999999999999;
+  z-index: 99999999;
   background-color: #f5f5f5;
   display: flex;
   justify-content: center;
